# jinko-api-cookbook

./: .envrc.sample  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRUBUTING.md  README.md  flake.nix  pyproject.toml  requirements.txt  sample-envrc  skills-lock.json
ai-exploration/: cohere-test.ipynb  cohere_interactive_trial_summary.ipynb  cohere_rag.ipynb  cohere_tools.ipynb  cohere_trial_sumary.ipynb  latex_to_mathjs.ipynb  train_set.jsonl  utils.py
cookbook/: api1.ipynb
cookbooks/: basic.ipynb  basic_stat_analysis.ipynb  bayesian_optimization.ipynb  calib_debugging.ipynb  combine_vpop_design.ipynb  data_privacy.ipynb  data_table_transformation.ipynb  download_models.ipynb  example1.ipynb  example_01.ipynb  hessian_matrix.ipynb  post_calibration_uq.ipynb  pre_calibration_uq.ipynb  producing_data_summary.ipynb  quantifying_uncertainty.ipynb  reviewing_model_versions.ipynb  run_a_trial.ipynb  sensitivity_analysis.ipynb  subsampling.ipynb  template.ipynb  training_biomod.ipynb  trial_comparison.ipynb  trial_design_optimization.ipynb  trial_design_optimization_binary_outcome.ipynb  trial_design_optimization_continuous_outcome.ipynb  trial_design_optimization_time_to_event.ipynb  visualizing_scalarResults.ipynb  visualizing_scalar_results.ipynb  visualizing_survival.ipynb  visualizing_timeseries.ipynb  vpop_generation_with_deep_learning.ipynb
cookbooks/ai_agents/: data_table_transformation.ipynb  data_table_transformation_deprecated.ipynb  (+1 more)
docs/: cookbook_migration_plan.md  jinko_sdk_v2_cheatsheet.md
e2e/: Makefile
e2e/lib/: api-key.sh  env.sh  (+1 more)
lib/: helpers.py  jinko_helpers.py
scripts/: audit_cookbook_sdk_usage.py  cleanup-notebook.sh  list-notebook-parameters.py  run-cookbook-with-parameters.sh  update-notebook-script.py
tutorial/: 01-getting-started.ipynb  api_onboarding.ipynb
tutorials/: 00-setup_check.ipynb  00-setup_check_deprecated.ipynb  00-setup_check_v2.ipynb  01-getting_started.ipynb  01-getting_started_deprecated.ipynb  02-api_onboarding.ipynb  02-api_onboarding_Influenza.ipynb  02-api_onboarding_Influenza_deprecated.ipynb  02-api_onboarding_deprecated.ipynb
vpop-calibration/: GP.py  GP_from_CM_and_distribs.py  GP_from_trial_results.py  GP_from_trial_results_BCG.py  PySAEM.py  README.md  data_pk_two_compartments.py  data_pk_two_compartments_absorption.py  data_pysaem_example_usage.py  example_usage_GP.py  example_usage_pySAEM.py  example_usage_pySAEM_GP.py  example_usage_pySAEM_jinko.py  example_usage_pySAEM_struct_model.py  nlmixr2_test.R  pk_two_compartments_data.py  pk_two_compartments_equations_with_absorption.py  pk_two_compartments_model.py  saemix_test.R
(+107 files in other folders)
