[tool.poetry]
name = "jinko-api-doc"
version = "0.0.1"
description = "Jinko API Documentation with Jupyter & Cookbook"
authors = ["SSE Team <team.jinko@novadiscovery.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyter-server = "^2.13.0"
jupyterlab = "^4.0.6"
matplotlib = "*"
pandas = "^2.1.4"
plotly = "^5.17.0"
python = ">=3.10,<3.12"
seaborn = "^0.13.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
