[tool.poetry]
name = "jinko-api-doc"
version = "0.0.1"
description = "Jinko API Documentation with Jupyter & Cookbook"
authors = ["SSE Team <team.jinko@novadiscovery.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
deepdiff = "^7.0.1"
black = {extras = ["jupyter"], version = "^24.4.2"}
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyter-server = "^2.13.0"
jupyterlab = "^4.0.6"
kaleido = "0.2.1"
matplotlib = "*"
pandas = "^2.2.2"
plotly = "^5.17.0"
python = ">=3.10"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
jinko = { git = "https://github.com/novainsilico/jinko-api-helpers-python.git" }
# when working with a jinko-api-helpers branch being developed, override this with : 
# jinko = { git = "git@git.novadiscovery.net:jinko/api/jinko-api-helpers-python.git", branch = "branch-name" }
scikit-survival = "^0.23.0"
lifelines = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
