[tool.poetry]
name = "jinko-api-cookbook"
version = "0.0.1"
description = "Jinko API Cookbook Repository"
authors = ["SSE Team <team.jinko@novadiscovery.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
deepdiff = "^7.0.1"
black = {extras = ["jupyter"], version = "^24.4.2"}
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyter-server = "^2.13.0"
jupyterlab = "^4.0.6"
kaleido = "0.2.1"
matplotlib = "*"
pandas = "^2.2.2"
plotly = "^5.17.0"
python = ">=3.12,<4.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
jinko-sdk = "^0.4.0"
# when working with a jinko-api-helpers branch being developed, override this with : 
# jinko-sdk = { git = "git@git.novadiscovery.net:jinko/api/jinko-api-helpers-python.git", branch = "18-migrate-crabbit-merge-to-jinko" }
scikit-survival = "^0.23.0"
lifelines = "^0.29.0"
cohere = "^5.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
